<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".pages.ViewGroupPage">

    <!-- Group ID Label -->
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_id_text"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textColor="@color/textPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"/>

    <!-- Leave Group Button -->
    <ImageButton
        android:id="@+id/leave_group_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView5"
        app:layout_constraintBottom_toBottomOf="@id/textView5"
        android:layout_marginEnd="24dp"
        app:tint="@color/primary"
        app:srcCompat="@drawable/rounded_exit_to_app_24" />

    <!-- Members Title -->
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/members"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/textPrimary"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"/>

    <!-- RecyclerView (Members List) -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/view_users_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/textView6"
        app:layout_constraintBottom_toTopOf="@id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Waiting on Leader Message -->
    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waiting_on_leader_to_start_matching"
        android:textSize="16sp"
        android:textColor="@color/textSecondary"
        android:textStyle="italic"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="48dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
